amplication-build-ckpcem8so74831bs6le0nsv6y

--- a/ampconfig.json
+++ b/ampconfig.json
@@ -1,9 +1,9 @@
 {
-  "dataServiceGeneratorVersion": "0.6.1",
+  "dataServiceGeneratorVersion": "0.6.3",
   "appInfo": {
     "name": "e-commerce",
     "description": "",
-    "version": "se3fremk",
+    "version": "gd2c9cw6",
     "id": "ckozdhaun13834861bs64ueqgxp2",
     "url": "https://app.amplication.com/ckozdhaun13834861bs64ueqgxp2"
   }
