--- a/ampconfig.json
+++ b/ampconfig.json
@@ -1,10 +1,18 @@
 {
-  "dataServiceGeneratorVersion": "0.6.3",
+  "dataServiceGeneratorVersion": "0.9.0",
   "appInfo": {
     "name": "e-commerce",
     "description": "",
-    "version": "gd2c9cw6",
+    "version": "u749qv8a",
     "id": "ckozdhaun13834861bs64ueqgxp2",
-    "url": "https://app.amplication.com/ckozdhaun13834861bs64ueqgxp2"
+    "url": "https://app.amplication.com/ckozdhaun13834861bs64ueqgxp2",
+    "settings": {
+      "dbHost": "localhost",
+      "dbName": "",
+      "dbPassword": "admin",
+      "dbPort": 5432,
+      "dbUser": "admin",
+      "appId": "ckozdhaun13834861bs64ueqgxp2"
+    }
   }
 }
