--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ POSTGRESQL_PASSWORD=admin
 POSTGRESQL_PORT=5432
 POSTGRESQL_URL=postgres://admin:admin@localhost:5432
 BCRYPT_SALT=10
+COMPOSE_PROJECT_NAME=amp_ckozdhaun13834861bs64ueqgxp2
